--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
 p{
     font-size: 16px;
+    color: #242742;
+}
+
+li {
+    color: #242742;
+	margin: 0;
+	padding: 5px 0 5px 30px;
+	list-style: none;
+	background-image: url("./assets/images/icon-list.svg");
+	background-repeat: no-repeat;
+	background-position: left center;
+	background-size: 20px;
 }
